# guitar-practice-routine-app_postgresql

./: .env.template  API_MISMATCH_CHECKLIST.md  CLAUDE.md  README.md  README_OLD.md  demo_data.sql  gpr.sh  migrate_chord_charts.py  migrate_common_chords.py  migrate_items.py  migrate_routines.py  package-lock.json  package.json  pyproject.toml  schema.sql  vite.config.js
app/: __init__.py  data_layer.py  database.py  models.py  routes.py  routes_v2.py  sheets.py
app/repositories/: __init__.py  base.py  chord_charts.py  common_chords.py  items.py  routines.py
app/services/: __init__.py  base.py  chord_charts.py  common_chords.py  items.py  routines.py
app/static/css/: input.css  main.css
app/static/js/: dnd-vendor-CF8lTqub.js  dnd-vendor-CF8lTqub.js.map  main.js  main.js.map  main.jsx  radix-vendor-BLQPQ2OB.js  radix-vendor-BLQPQ2OB.js.map  react-vendor-D3F3s8fL.js.map  theme-toggle.js
app/static/js/components/: AutocreateSuccessModal.jsx  ChordChartEditor.jsx  ChordChartsModal.jsx  ItemEditor.jsx  NavMenu.jsx  NoteEditor.jsx  PracticeItemsList.jsx  PracticePage.jsx  RoutineEditor.jsx  RoutinesPage.jsx
app/static/js/components/icons/: ChordIcon.jsx
app/static/js/contexts/: NavigationContext.jsx
app/static/js/hooks/: useActiveRoutine.js  useLightweightItems.js  useRoutineEditor.js
app/static/js/utils/: analytics.js  logging.js  platform.js
app/templates/: base.html.jinja
app/utils/: chord_ocr.py  llm_analytics.py
scripts/: check_sequences.py
